--- a/.github/workflows/myFlask1.yml
+++ b/.github/workflows/myFlask1.yml
@@ -13,14 +13,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9.18"]
+        python-version: ["3.9"]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9.18
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: 3.9.18
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
